Project

General

Profile

Actions

Bug #8351

closed

Error message is not grammatical

Bug #8351: Error message is not grammatical

Added by agrimm (Andrew Grimm) over 13 years ago. Updated over 13 years ago.

Status:
Closed
Assignee:
Target version:
-
ruby -v:
ruby 2.0.0p0 (2013-02-24 revision 39474) [x86_64-linux]
[ruby-core:54725]

Description

Enumerable#chunk has the error message "symbol begins with an underscore is reserved".

This is not grammatical. Assuming that error messages can be modified, possible fixes include

"symbol begins with an underscore, which is reserved"
"symbols beginning with an underscore are reserved"

Updated by Eregon (Benoit Daloze) over 13 years ago Actions #1 [ruby-core:54727]

Thanks, it will be committed soon!

Updated by Eregon (Benoit Daloze) over 13 years ago Actions #2

  • Status changed from Open to Closed
  • % Done changed from 0 to 100

This issue was solved with changeset r40539.
Andrew, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.


  • enum.c (Enumerable#chunk): fix grammar of error message
    for symbols beginning with an underscore [Bug #8351]
Actions

Also available in: PDF Atom